[package]
authors = ["zpz"]
name = "rs_version01"
version = "0.1.0"

[dependencies.pyo3]
version = "0.5.2"
features = ["extension-module"]

[dependencies.datex]
path = "../../../../src/rs/datex"

[dependencies]
numpy = "0.4.0"
ndarray = "0.12.1"

[lib]
name = "rs"
path = "src/lib.rs"
crate-type = ["cdylib"]
